--- a/src/App.css
+++ b/src/App.css
@@ -174,107 +174,76 @@ img {
     margin-bottom: 5%;
 }
 
-.first-page-bubbles {
-    padding-left: 10%;
-    margin-bottom: -20%;
+.first-page-bubbles,
+.meet-robot-bubble,
+.name-island-bubbles {
+    background-color: #9CBCCC;
+    border-radius: 50%;
+    animation: pulse 5s infinite;
+    margin-top: 1%;
 }
 
-.first-page-bubbles-1 {
+.first-page-bubbles.bubbles-1 {
     width: 0.8vw;
     height: 0.8vw;
-    border-radius: 50%;
-    background-color: #9CBCCC; 
     margin-left: 15%;
     margin-top: 1%;
-    animation: pulse 3s infinite;
 }
 
-.first-page-bubbles-2 {
-    
+.first-page-bubbles.bubbles-2 {
     width: 1.2vw;
     height: 1.2vw;
-    border-radius: 50%;
-    background-color: #9CBCCC; 
     margin-left: 17%;
     margin-top: 0.5%;
-    animation: pulse 3s infinite;
 }
 
-.first-page-bubbles-3 {
+.first-page-bubbles.bubbles-3 {
     width: 1.1vw;
     height: 1.1vw;
-    border-radius: 50%;
-    background-color: #9CBCCC; 
     margin-left: 15%;
     margin-top: 0.5%;
-    animation: pulse 3s infinite;
 }
 
-.first-page-bubbles-4 {
+.first-page-bubbles.bubbles-4 {
     width: 1.3vw;
     height: 1.3vw;
-    border-radius: 50%;
-    background-color: #9CBCCC;
     margin-left: 20%;
     margin-top: -0.9%; 
-    animation: pulse 3s infinite;
 }
 
-.first-page-bubbles-5 {
+.first-page-bubbles.bubbles-5 {
     width: 1.2vw;
     height: 1.2vw;
-    border-radius: 50%;
-    background-color: #9CBCCC;
     margin-left: 18%;
     margin-top: 1.5%;
-    animation: pulse 3s infinite;
 }
 
-.first-page-bubbles-6 {
-    
+.first-page-bubbles.bubbles-6 {
     width: 0.8vw;
     height: 0.8vw;
-    border-radius: 50%;
-    background-color: #9CBCCC;  
     margin-left: 18%;
     margin-top: 1.9%;
-    animation: pulse 3s infinite;
-    
 }
 
-.first-page-bubbles-7 {
+.first-page-bubbles.bubbles-7 {
     width: 1vw;
     height: 1vw;
-    border-radius: 50%;
-    background-color: #9CBCCC; 
     margin-top: 3%;
     margin-left: 17%;
-    animation: pulse 3s infinite;
-    
 }
 
-.first-page-bubbles-8 {
-    
+.first-page-bubbles.bubbles-8 {
     width: 1vw;
     height: 1vw;
-    border-radius: 50%;
-    background-color: #9CBCCC; 
     margin-left: 18%;
-    margin-top: 1.2%;
-    animation: pulse 3s infinite;
-    
+    margin-top: 1.2%; 
 }
 
-.first-page-bubbles-9 {
-    
+.first-page-bubbles.bubbles-9 {
     width: 1vw;
     height: 1vw;
-    border-radius: 50%;
-    background-color: #9CBCCC;
     margin-left: 15%;
     margin-top: 1%; 
-    animation: pulse 3s infinite;
-  
 }
 
 
@@ -287,6 +256,7 @@ img {
     background-position: right;
     padding: 5% 0 7%;
     margin-right: 4%;
+    margin-top: 15%;
 }
 
 .about-island .about-island-title {
@@ -307,53 +277,58 @@ img {
 
 /* MeetOurRobot.js */ 
 
+.meet-robot {
+    margin-top: 20%;
+}
+
 .meet-robot-turtle {
     margin-right: 60%;
-}
-
-.meet-robot-top {
-    margin-left: -30%;
-}
-
-.meet-robot-top .meet-robot-bubble2 {
-    margin-left: 27%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
 }
 
 .meet-robot p {
     font-family:'Barlow';
     font-size: 3vw;
     text-align: center;
-    margin-right: 58%;
     padding-bottom: 0%;
     font-weight: 600;
+    margin: 1% 42% 1% 0;
 }
 
-.meet-robot-bubble1 {
-  height: 2vw;
-  width: 2vw;
-  background-color: #9CBCCC;
-  border-radius: 50%;
-  animation: pulse 5s infinite;
-  margin-left: 30%;
-}
-
-.meet-robot-bubble2{ 
-    height: 2vw;
-    width: 2vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pulse 5s infinite;
-    margin-left: 32%;
-}
-
-.meet-robot-bubble3 {
+.meet-robot-bubble.bubble-1 {
     height: 1vw;
     width: 1vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pulse 5s infinite;
-    margin-left: 30%; 
+    margin-left: 22%;
+}
+
+.meet-robot-bubble.bubble-2 { 
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-left: 24%;
+}
+
+.meet-robot-bubble.bubble-3 {
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-left: 22%; 
+}
+
+.meet-robot-bubble.bubble-4 {
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-left: 36%; 
+}
+
+.meet-robot-bubble.bubble-5 {
+    height: 1.5vw;
+    width: 1.5vw;
+    margin-left: 38%; 
+}
+
+.meet-robot-bubble.bubble-6 {
+    height: 1vw;
+    width: 1vw;
+    margin-left: 37%; 
 }
 
 @keyframes pulse {
@@ -374,6 +349,7 @@ img {
 .model-view {
     background-image: url('/images/islands/island3.png');
     background-repeat: no-repeat;
+    background-size: contain;
     padding: 20% 0% 10% 10%;
     margin: -30% 0% 0% 50%;
 }
@@ -391,39 +367,37 @@ model-viewer {
 
 /* NameIsland.js*/
 
-
 .name-island {
+    position: relative;
+    top: -15vh;
     background-image: url('/images/islands/island4.png');
     background-size: contain;
     background-repeat: no-repeat;
-    margin: 0 10% 0%;
-    padding: 4.5% 0 15%;
-    width: 50%;
-    position:relative;
+    margin: 0 0 0 5%;
+    padding: 5% 8% 5% 0;
+    width: 45%;
  }
 
 .name-island-title {
     font-family: 'Archivo', sans-serif;
-    font-size: 2.9vw;
+    font-size: 35px;
+    /* font-size: 2.9vw; */
     font-weight: 500;
-    padding-top: 1.5%;
-    padding-bottom: 1%;
-    padding-left: 7%;
-    
+    padding: 1.5% 0 1% 7%;
 }
 
 .name-island-subtitle {
     font-family: 'Archivo', sans-serif;
-    font-size: 1.8vw;
+    font-size: 25px;
+    /* font-size: 1.8vw; */
     font-weight: 500;
-    padding-top: 1.5%;
-    padding-bottom: 1%;
-    padding-left: 15%;
+    padding: 1.5% 0 1% 15%;
 }
 
 .name-island-body {
     font-family: 'Poppins';
-    font-size: 1.39vw;
+    font-size: 15px;
+    /* font-size: 1.39vw; */
     font-weight: 300;
     padding-top: 1.5%;
     padding-bottom: 1%;
@@ -431,37 +405,28 @@ model-viewer {
     margin-right: 7%;
 }
 
-.name-island-bubble1 {
-    position:absolute;
-    left:132%;
-    top:45%;
-    height: 1.4vw;
-    width: 1.4vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pulse 4s infinite; 
+.name-island-bubbles.bubble-1 {
+    position: absolute;
+    left: 135%;
+    top: 40%;
+    height: 1.5vw;
+    width: 1.5vw;
 }
 
-.name-island-bubble2 {
-    position:absolute;
-    left:130%;
-    top:50%;
-    width: 1.4vw;
-    height: 1.34vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pulse 4s infinite;
+.name-island-bubbles.bubble-2 {
+    position: absolute;
+    left: 130%;
+    top: 47%;
+    width: 1.5vw;
+    height: 1.5vw;
 }
 
-.name-island-bubble3 {
-    position:absolute;
-    left:135%;
-    top:53%;
+.name-island-bubbles.bubble-3 {
+    position: absolute;
+    left: 133%;
+    top: 55%;
     width: 1vw;
     height: 1vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pulse 4s infinite;
 }
 
 
@@ -471,39 +436,35 @@ model-viewer {
     margin-bottom: 5%;
 }
 
-.timeline-submarine-bubbles-1 {
-    width: 1.2vw;
-    height: 1.2vw;
+.timeline-bubbles {
     background-color: #9CBCCC;
     border-radius: 50%;
-    animation: pop3 4s infinite;
-    margin-left: 11%;
+}
+
+.timeline-bubbles.bubbles-1 {
+    width: 1.5vw;
+    height: 1.5vw;
+    margin-left: 10%;
     margin-top: 5%;
     margin-bottom: 1%;
-    
+    animation: pop3 3s infinite;
 }
 
-.timeline-submarine-bubbles-2 {
-    width: 1vw;
-    height: 1vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pop2 4s infinite; 
-    margin-left: 13%;
-    margin-bottom: 2%;
-    
-}
-
-.timeline-submarine-bubbles-3 {
+.timeline-bubbles.bubbles-2 {
     width: 1.3vw;
     height: 1.3vw;
-    background-color: #9CBCCC;
-    border-radius: 50%;
-    animation: pop1 4s infinite;
-    margin-left: 12%;
+    margin-left: 8%;
+    margin-bottom: 1%;
+    animation: pop2 3s infinite;
+}
+
+.timeline-bubbles.bubbles-3 {
+    width: 1vw;
+    height: 1vw;
+    margin-left: 10%;
     margin-bottom: -2%;
-    
-} 
+    animation: pop1 3s infinite;
+}
 
 .timeline-submarine {
     background-image: url('/images/timeline/submarine3.png');
