--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,6 @@ body {
     margin:0 auto;
 }
 
-
 p {
     margin: 0;
 }
@@ -23,6 +22,7 @@ p {
 img {
     max-width: 100%;
 }
+
 
 /* Controls.js */
 
@@ -87,7 +87,7 @@ img {
     font-family: 'Barlow';
     font-size: 36px;
     color: black;
-    padding: 14px 16px;
+    padding: 5% 30px;
     text-decoration: none;
     cursor: pointer;
 }
@@ -614,6 +614,7 @@ model-viewer {
 .project-progress-7 {
     background-image: url('/images/progress/robot-head.png');
 }
+
 
 /* HomeControls.js */
 
