--- a/src/App.css
+++ b/src/App.css
@@ -80,22 +80,21 @@ img {
 
 .navbar li {
     float: left;
+    padding: 1% 2%;
 }
 
 .navbar li a {
     display: block;
     font-family: 'Barlow';
-    font-size: 36px;
+    font-size: 25px;
     color: black;
-    padding: 5% 30px;
     text-decoration: none;
     cursor: pointer;
 }
 
 @media (max-width: 768px) {
     .navbar li a {
-    font-size: 20px;
-    padding: 10px 16px;
+        font-size: 20px;
     }
 }
 
@@ -189,8 +188,9 @@ img {
 
 .first-page-logo {
     position: absolute;
-    left: 25%;
+    left: 27%;
     top: 150px;
+    width: 45%;
     z-index: 50;
 }
 
@@ -255,8 +255,6 @@ img {
 @media (max-width: 768px) {
     
     .first-page-logo {
-        left: 27%;
-        width:45%;
         top: 110px;
     }
     
@@ -630,17 +628,13 @@ model-viewer {
 @keyframes pop3 {
     0% {
         transform: scale(0);   
-    }
-    50%{
+    }50%{
         transform: scale(0);
-    }
-    75%{
+    }75%{
         transform: scale(1); 
-    }
-    76%{
+    }76%{
         opacity:1;
-    }
-    100%{
+    }100%{
         opacity:0;
     }
 }
@@ -648,17 +642,13 @@ model-viewer {
 @keyframes pop2 {
     0% {
         transform: scale(0);   
-    }
-    25%{
+    }25%{
         transform:scale(0);
-    }
-    50% {
+    }50% {
         transform: scale(1);
-    }
-    51% {
+    }51% {
         opacity: 1;
-    }
-    100% {
+    }100% {
         opacity: 0;
     }
 }
@@ -666,14 +656,11 @@ model-viewer {
 @keyframes pop1 {
     0% {
         transform: scale(0);   
-    }
-    25% {
+    }25% {
         transform: scale(1);
-    }
-    26% {
+    }26% {
         opacity: 1;
-    }
-    100% {
+    }100% {
         opacity: 0;
     }
 }
@@ -687,16 +674,14 @@ model-viewer {
     .timeline-submarine-windows p:first-child {
         width: 40px;
         height: 40px;
-        font-size: 20px;
+        font-size: 25px;
     }
 
     .timeline-submarine-windows p {
-        font-size:12px;
+        font-size: 12px;
     }
 
     .timeline-submarine-windows {
-        display: flex;
-        justify-content: space-between;
         padding: 12% 7% 12%;
     }
 }
