--- a/src/App.css
+++ b/src/App.css
@@ -101,7 +101,8 @@ img {
 
 @media (max-width: 428px) {
     .navbar li a {
-        font-size: 12px;
+        font-size: 10px;
+        padding:0;
     }
 }
 
@@ -296,6 +297,7 @@ img {
     padding: 5% 0 7%;
     margin-right: 4%;
     margin-top: 5%;
+    position: relative;
 }
 
 .about-island .about-island-title {
@@ -332,7 +334,7 @@ img {
 
  @media (max-width: 428px) {
     .about-island {
-        margin-top: -70%;
+        margin-top: -5%;
         margin-left:2%;
     }
     
@@ -467,6 +469,7 @@ model-viewer {
 
     .meet-robot {
         margin-top: 10%;
+        margin-bottom: 0%
     }
 
     .meet-robot > p {
@@ -492,14 +495,15 @@ model-viewer {
     .model-view {
         padding: 8% 8% 8% 12%;
         margin-left: 40%;
+        margin-bottom: 10%;
     }
 }
 
 /* NameIsland.js*/
 
 .name-island {
-    position: relative;
     top: -15vh;
+    position: relative;
     background-image: url('/images/islands/island4.png');
     background-size: contain;
     background-repeat: no-repeat;
@@ -557,12 +561,11 @@ model-viewer {
 @media (max-width: 768px) {
     .name-island {
         margin-top: 10%;
-        width: 86%;
     }
 
     .name-island-title {
         font-size: 25px;
-        padding-right: 20%;
+        padding-right: 3%;
     }
     
     .name-island-subtitle {
@@ -579,16 +582,19 @@ model-viewer {
 
 @media (max-width: 428px) {
     .name-island {
-        margin-top: 80%;
+        position: relative;
+        margin-top: 40%;
+        width: 83%;
+        margin-bottom: 20%;
     }
 
     .name-island-title {
         font-size: 18px;
-        padding-right: 18%;
+        padding-right: 13%;
     }
     
     .name-island-subtitle {
-        font-size: 12px;
+        font-size: 11px;
         line-height: 14px;;
         padding: 2% 10% 0% 20%;
     }
@@ -601,18 +607,18 @@ model-viewer {
     }
 
     .name-island-bubbles.bubble-1 {
-        left: 65%;
-        top: 105%;
+        left: 75%;
+        top: 95%;
     }
     
     .name-island-bubbles.bubble-2 {
-        left: 62%;
-        top: 110%;
+        left: 72%;
+        top: 96%;
     }
     
     .name-island-bubbles.bubble-3 {
-        left: 63%;
-        top: 115%;
+        left: 74%;
+        top: 97%;
     }
 }
 
@@ -748,8 +754,18 @@ model-viewer {
         margin-top: -10%;
     }
 
+    .timeline-bubbles.bubbles-1 {
+        margin-left: 12%;
+    }
+
+    .timeline-bubbles.bubbles-2 {
+        margin-left: 10%;
+    }
+
     .timeline-bubbles.bubbles-3 {
-        margin-bottom: -4%;
+        margin-bottom: -6%;
+        margin-left: 12%;
+        
     }
     
     .timeline-submarine-title {
@@ -773,7 +789,7 @@ model-viewer {
 
 @media (max-width: 428px) {
     .timeline {
-        margin-top: -56%;
+        margin-top: 0%;
     }
 
     .timeline-bubbles.bubbles-3 {
@@ -817,9 +833,9 @@ model-viewer {
     width: 90%;
 }
 
+.project-progress p:nth-child(6), 
 .project-progress p:nth-child(3),
-.project-progress p:nth-child(4),
-.project-progress p:nth-child(6) {
+.project-progress p:nth-child(4) {
     padding: 2% 4%;
 }
 
@@ -922,6 +938,11 @@ model-viewer {
     .project-progress p:nth-child(4) {
         padding-top: 4%;
         padding-bottom: 3%;
+    }
+
+    .project-progress p:nth-child(6) {
+        padding-top: 3%;
+        padding-bottom: 4%;
     }
 
     .project-progress p:nth-child(7),
